--- a/resources/assets/my-app/src/app/app.component.html
+++ b/resources/assets/my-app/src/app/app.component.html
@@ -1,5 +1,11 @@
-<button mat-button>Basic</button>
-<button mat-button color="primary">Primary</button>
-<button mat-button color="accent">Accent</button>
-<button mat-button color="warn">Warn</button>
-<button mat-button disabled>Disabled</button>
+<mat-toolbar color="primary">
+    <span>Laravel + Angular</span>
+</mat-toolbar>
+
+<mat-divider></mat-divider>
+
+<app-post *ngFor="let p of posts" [post]="p"></app-post>
+
+<button mat-fab color="primary" class="float-button">
+    <mat-icon >add</mat-icon>
+</button>
