--- a/resources/assets/my-app/src/app/app.component.html
+++ b/resources/assets/my-app/src/app/app.component.html
@@ -4,8 +4,11 @@
 
 <mat-divider></mat-divider>
 
-<app-post *ngFor="let p of posts" [post]="p"></app-post>
+<div fxLayout="row wrap" fxLayoutAlign="space-around stretch" >
+    <app-post *ngFor="let p of posts" [post]="p"></app-post>
+</div>
 
-<button mat-fab color="primary" class="float-button">
+
+<button mat-fab color="primary" class="float-button" (click)="openDialog()">
     <mat-icon >add</mat-icon>
 </button>
